# code-review-auto-llm

./: .env.example  .gitignore  README.md  azure-template.yml  pyproject.toml  pytest.ini
prompts/: system.txt  user_review.txt
review_rules/: README.md
review_rules/Portal de Boletos/: boletoonline-php8.md
src/: __init__.py  __main__.py  bootstrap.py  cli.py  main.py
src/adapters/: __init__.py  azure_devops_adapter.py  diff_adapter.py  litellm_adapter.py
src/application/: __init__.py
src/application/parsers/: __init__.py  review_parser.py
src/application/validators/: __init__.py  cost_validator.py  pr_validator.py
src/core/: __init__.py
src/core/domain/: __init__.py  file_review.py  pull_request.py  review_result.py
src/core/ports/: __init__.py  diff_port.py  llm_port.py  vcs_port.py
src/infrastructure/: __init__.py  rules_service.py
src/infrastructure/config/: __init__.py  settings.py
src/infrastructure/utils/: __init__.py  formatting.py  output.py
tests/: __init__.py
tests/unit/: test_cli.py  test_main_entry.py
tests/unit/adapters/: __init__.py  test_azure_devops_adapter.py  test_diff_adapter.py  test_litellm_adapter.py
tests/unit/application/: __init__.py  test_cost_validator.py  test_post_review_comments.py  test_pr_validator.py  test_review_parser.py
tests/unit/core/: __init__.py  test_domain_module_reload.py  test_domain_properties.py  test_file_review.py  test_pull_request.py  test_review_result.py
tests/unit/infrastructure/: __init__.py  test_formatting.py  test_output.py  test_rules_service.py  test_settings.py
